common, cards e first section layout

--- a/style/style.css
+++ b/style/style.css
@@ -3,9 +3,93 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Comfortaa", sans-serif;
+}
+
+.flex {
+    display: flex;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.column {
+    flex-direction: column;
+}
+
+.gap {
+    gap: 2rem;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 1rem;
+    gap: 1rem;
+    border-radius: 2rem;
+    padding: 2rem;
+    background-color: #b5ddff;
+    overflow: hidden;
+}
+
+.btn {
+    background-color: rgba(230, 104, 129, 0.528);
+    border-radius: 2em;
+    padding: 0.5em 3em;
+}
+
+h1 {
+    text-align: center;
+    font-size: 20px;
+    align-self: center;
 }
 
 /************************** Header style ***************************/
+.header {
+    background-color: #0084fd;
+    color: white;
+    padding: 1rem 2rem;
+    font-size: 30px;
+}
+
 /************************** Main style ***************************/
+.info {
+    padding: 3rem 2rem;
+}
+
+.info h1 {
+    color: #0084fd;
+}
+
+.card p {
+    text-align: center;
+}
+
+/* card double-sized */
+.double-size {
+    padding-bottom: 0;
+}
+
+.double-size .btn {
+    margin-bottom: 1rem;
+}
+
+.double-size img {
+    align-self: center;
+}
+
+.info .double-size p {
+    text-align: start;
+}
+
+/* other cards */
+.fontawesome {
+    align-self: center;
+    color: #0084fd;
+    font-size: 60px;
+}
+
 /************************** Footer style ***************************/
 /************************** Queryes style ***************************/
