--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,11 @@
     font-family: "Comfortaa", sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .flex {
     display: flex;
 }
@@ -27,11 +32,10 @@
     flex-direction: column;
     align-items: baseline;
     gap: 1rem;
-    gap: 1rem;
     border-radius: 2rem;
     padding: 2rem;
-    background-color: #b5ddff;
     overflow: hidden;
+    text-align: center;
 }
 
 .btn {
@@ -42,11 +46,21 @@
 
 h1 {
     text-align: center;
-    font-size: 20px;
+    font-size: 23px;
     align-self: center;
 }
 
-/************************** Header style ***************************/
+h2 {
+    text-align: center;
+    font-size: 18px;
+    align-self: center;
+}
+
+img {
+    align-self: center;
+}
+
+/***** Header style *****/
 .header {
     background-color: #0084fd;
     color: white;
@@ -54,7 +68,8 @@ h1 {
     font-size: 30px;
 }
 
-/************************** Main style ***************************/
+/***** Main style *****/
+/********* info section ********/
 .info {
     padding: 3rem 2rem;
 }
@@ -63,8 +78,14 @@ h1 {
     color: #0084fd;
 }
 
-.card p {
-    text-align: center;
+.info .card {
+    background-color: #b5ddff;
+}
+
+.info .fontawesome {
+    align-self: center;
+    color: #0084fd;
+    font-size: 60px;
 }
 
 /* card double-sized */
@@ -76,19 +97,156 @@ h1 {
     margin-bottom: 1rem;
 }
 
-.double-size img {
-    align-self: center;
-}
-
 .info .double-size p {
     text-align: start;
 }
 
-/* other cards */
-.fontawesome {
+/********* strategic section ********/
+.strategic {
+    padding: 3rem 2rem;
+    background-color: #9792e4;
+}
+
+.strategic>img {
+    width: 100%;
+}
+
+.strategic>p,
+.strategic h1 {
+    color: white;
+    align-self: flex-start;
+}
+
+.strategic a {
+    width: 3em;
+    height: 3em;
     align-self: center;
-    color: #0084fd;
+    background-color: #9792e4;
+    padding: 1rem;
+    border-radius: 50%;
+}
+
+.strategic i {
+    margin-left: 2px;
+}
+
+.strategic .card {
+    background-color: white;
+}
+
+/********* testimonial section ********/
+.testimonial {
+    padding: 3rem 2rem;
+}
+
+.testimonial .card {
+    background-color: #9792e4;
+    color: white;
+}
+
+.testimonial img {
+    border-radius: 50%;
+}
+
+.testimonial i {
+    transform: translateY(-2px);
+}
+
+/********* benefit section ********/
+.benefit {
+    padding: 3rem 2rem;
+    background-color: #9792e4;
+}
+
+.benefit h1 {
+    color: white;
+}
+
+.benefit .card {
+    text-align: left;
+    background-color: white;
+}
+
+.big-number {
+    color: #9792e4;
+    font-size: 50px;
+}
+
+.benefit h2 {
+    align-self: flex-start;
+    color: #9792e4;
+    font-size: 20px;
+}
+
+.benefit .btn {
+    background-color: #9792e4;
+    color: white;
+}
+
+/********* about section ********/
+.about {
+    padding: 3rem 2rem;
+}
+
+.img-quatermark {
+    width: 60%;
+    position: relative;
+}
+
+.quatermark {
     font-size: 60px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.img-quatermark img {
+    border-radius: 50%;
+    width: 100%;
+}
+
+.about h1,
+.about h2,
+.about i {
+    color: #9792e4;
+    align-self: flex-start;
+    text-align: left;
+}
+
+.about a,
+.about a i {
+    background-color: #9792e4;
+    color: white;
+    align-self: baseline;
+}
+
+/********* about section ********/
+.start {
+    padding: 3rem 2rem;
+    background-color: #9792e4;
+    color: white;
+    text-align: center;
+}
+
+h3 {
+    font-size: 50px;
+    color: rgb(255, 194, 41);
+}
+
+.start>a {
+    color: #9792e4;
+    background-color: white;
+    padding: 1rem 4rem;
+    align-self: center;
+}
+
+.legal {
+    font-size: 14px;
+}
+
+.legal a {
+    color: white;
+    text-decoration: underline;
 }
 
 /************************** Footer style ***************************/
