--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,11 @@ img {
     font-size: 60px;
 }
 
+.info a {
+    background-color: #0084fd;
+    color: white;
+}
+
 /* card double-sized */
 .double-size {
     padding-bottom: 0;
